# eyeflow

./: .env.example  .gitignore  .gitignore copy  404.html  API-REFERENCE.md  ARCHITECTURE-INTEGRATED-COMPLETE.md  CATALOG-GOVERNANCE.md  CONNECTOR-DEVELOPER-GUIDE.md  DOCUMENTATION-HUB.md  IMPLEMENTATION-SUMMARY.md  PROJECT-COMPLETE-GUIDE.md  PROJECT-MANIFEST.md  QUICK-REFERENCE.md  README copy.md  README.md  SEMANTIC_COMPILER_ARCHITECTURE.md  SESSION-3-SUMMARY.md  TEST-INFRASTRUCTURE-FIX.md  TESTING.md  api-integration-tests.sh  docker-compose.yml  docusaurus.config.js  package-lock.json  package.json  sidebars.js  sitemap.xml  test-enriched-context-api.sh  test-suite.sh
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
.github/workflows/: ci-cd.yml
assets/js/: 0a6d4496.d92b87d0.js  115d4644.4ad97ed7.js  126fed71.b618076e.js  15d0ad86.251a6837.js  17896441.1eaa8d7e.js  1be78505.039d6973.js  2288dad8.5c9bf786.js  24225d17.d6a5a389.js  2d1958fb.a090abd5.js  368ddddd.6f53919a.js  3e887fff.9ce0db4a.js  4185229b.a97bdcba.js  41bd0fda.d603c4f2.js  5eb7ab9b.46195fd7.js  5f177e7c.2f5c16de.js  6c607d23.11a18996.js  71b0e7a1.72d4695b.js  7ef6c744.d391b837.js  828d8b3a.7b46f48d.js  8f29ed76.2668a761.js  935f2afb.90f933ee.js  962525aa.f37a6639.js  c896f4f8.7459ae65.js  caf70b3f.9158770d.js  db311c44.b9ff2800.js  e5d8adf4.e2832b39.js  eb00a851.00071420.js  ed140b02.9d1beda9.js  f78dff23.1b39596a.js  f9584f4a.cff0e16b.js  fbf5f7dc.eb6fb55a.js  fcaca645.352e825f.js  main.6db9aac6.js  runtime~main.c07de27f.js
docs-website/: docusaurus.config.js  sidebars.js
docs/concepts/: audit-observability.md  capability-catalog.md  distributed-execution.md  event-sources.md  llm-calls.md  llm-ir.md  physical-control.md  security.md  semantic-compilation.md  svm-runtime.md
docs/for-decision-makers/: compliance-security.html  compliance-security.md  roi-analysis.html  roi-analysis.md  scaling-performance.html  scaling-performance.md  technology-selection.html  technology-selection.md  use-cases.html  use-cases.md
docs/for-developers/: api-reference.html  api-reference.md  architecture.html  architecture.md  deployment.html  deployment.md  sdks.html  sdks.md
docs/for-end-users/: cli-basics.html  cli-basics.md  first-rule.html  first-rule.md  first-task.html  first-task.md  quickstart.html  quickstart.md  ui-dashboard.html  ui-dashboard.md
docs/getting-started/: dashboard.md  first-workflow.md  quickstart.md
docs/intro/: vs-alternatives.md  vs-openclaw.html  vs-openclaw.md  what-is-eyeflow.html  what-is-eyeflow.md  why-eyeflow.html  why-eyeflow.md
docs/roadmap/: implementation.md
docs/technical-deep-dive/: llm-ir.html  (+15 more)
documentation/: ARCHITECTURE-DIAGRAMS.md  ARCHITECTURE-LLM-RULES.md  ARCHITECTURE.md  ARCHITECTURE_TECHNIQUE.md  CAHIER_DES_CHARGES.md  CLEANUP-LOG.md  COMPLETION-SUMMARY.md  DAY-4-SUMMARY.md  DELIVERABLES.md  ENRICHED-LLM-CONTEXT-API.md  EXAMPLES-USAGE.md  EXTENSIBLE-LLM-CONTEXT-GUIDE.md  IMPLEMENTATION-MATRIX.md  IMPLEMENTATION_PHASE_1.md  INDEX.md  PHASE-2-DAY-3-SUMMARY.md  PYTHON-LLM-SERVICE.md  QUICK-START.md  STATUS-DASHBOARD.md  TASK_COMPILER_PHASE_2.0.md  compilation_diagramme.md  complet_summary.md  diagramme_flow  semantic_compiler_spec.docx  systeme_architecture_current_new_layer_integration
eyeflow-agent/: Dockerfile  requirements.txt
eyeflow-dashboard/: package.json
eyeflow-llm-service/: .env.example  README.md  main.py  requirements.txt
eyeflow-server/: .env.test  .gitignore  API_ENDPOINTS.md  COMPILATION_SYSTEM.md  DATABASE_SETUP.md  Dockerfile  E2E-TEST-STATUS.md  EXECUTION_ARCHITECTURE.md  EXTENSIBILITY-VALIDATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_EXAMPLE.md  INTEGRATION_GUIDE_COMPILATION.md  NEXT_PHASES_REALTIME_DAG_APPROVAL.md  POWERFUL_RULES_GUIDE.md  README-NESTJS.md  README_POWERFUL_RULES.md  SETUP_COMPLETE.md  SOLUTION_SUMMARY.md  jest.config.js  package-lock.json  package.json  run-e2e-tests.js  test-api.sh  tsconfig.json
eyeflow-svm-mcu/: Cargo.toml  memory.x
eyeflow-svm-mcu/.cargo/: config.toml
eyeflow-svm-mcu/src/: main.rs  offline.rs  svm.rs
eyeflow-svm-node/: Cargo.toml  build.rs
eyeflow-svm-node/proto/: llm_ir.proto
eyeflow-svm-node/src/: audit.rs  config.rs  fallback.rs  health.rs  main.rs  node.rs  offline.rs  proto.rs  svm.rs  vault.rs
fr/: 404.html  sitemap.xml
website/: build-log.txt  build-output.txt  docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+420 files in other folders)
